# Backend-Benchmark-Lab

./: .gitignore  CLAUDE.md  README.md  roadmap.md
implementations/python-fastapi-pragmatic/: Dockerfile  pyproject.toml
implementations/python-fastapi-pragmatic/src/: main.py
implementations/python-fastapi-pragmatic/src/infrastructure/cache/: connection.py
implementations/python-fastapi-pragmatic/src/infrastructure/database/: connection.py  models.py
implementations/python-fastapi-pragmatic/src/presentation/api/v1/: aggregation.py  bulk_operations.py  caching.py  column_overhead.py  echo.py  external.py  router.py  (+4 more)
implementations/python-fastapi-pragmatic/src/presentation/schemas/: aggregation.py  bulk_operations.py  caching.py  column_overhead.py  n_plus_one.py  transactions.py  user.py
implementations/python-fastapi-strict/: Dockerfile  pyproject.toml
implementations/python-fastapi-strict/src/: main.py
implementations/python-fastapi-strict/src/application/services/: user_service.py
implementations/python-fastapi-strict/src/domain/entities/: user.py
implementations/python-fastapi-strict/src/domain/repositories/: user_repository.py
implementations/python-fastapi-strict/src/domain/use_cases/: user_use_cases.py
implementations/python-fastapi-strict/src/infrastructure/database/: connection.py  models.py
implementations/python-fastapi-strict/src/presentation/api/: dependencies.py
implementations/python-fastapi-strict/src/presentation/middleware/: auth.py  logging.py
implementations/python-fastapi-strict/src/presentation/schemas/: common.py  user.py
(+101 files in other folders)
